adjusted home gallery CSS to center nav buttons

--- a/less/pages/homepage/gallery-section.less
+++ b/less/pages/homepage/gallery-section.less
@@ -22,16 +22,20 @@
 
   #carousel {
 
+
+
     nav {
       // float: right;
       margin-top: 8px;
+      margin-bottom: 24px;
+      text-align: center;
+      letter-spacing: 1em;
+      // margin: 8px auto;
 
       button {
-        float: left;
         width: 1em;
         height: 1em;
         padding: 0;
-        margin-left: 1em;
         border: @hairline solid @medium-gray;
         border-radius: 100%;
         background-color: @white;
