--- a/less/pages/individual-works.less
+++ b/less/pages/individual-works.less
@@ -7,12 +7,10 @@
 #image {
   margin: auto;
   display: block;
-  width: 800px;
-  height: auto;
 }
 
 #global-footer{
-  position: absolute;
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -44,4 +42,10 @@
 
 body{
   background-color: @light-tan;
+}
+
+#test{
+  margin: auto;
+  display: block;
+  height: auto;
 }
