--- a/less/pages/homepage/mission-section.less
+++ b/less/pages/homepage/mission-section.less
@@ -2,5 +2,15 @@
 
 #mission-section {
   // put all the CSS for the homepage mission section here
-  color: @sello-tape;
+  color: @red;
+
+  .mission {
+
+    img {
+      max-width: 300px;
+      margin: 0 auto;
+      align-items: center;
+    }
+  }
+
 }
