--- a/less/pages/homepage/mission-section.less
+++ b/less/pages/homepage/mission-section.less
@@ -2,10 +2,10 @@
 
 #mission-section {
   // put all the CSS for the homepage mission section here
-  color: @red;
+  background-color: rgb(184,214,206);
 
   .mission {
-
+    font-size: 35px;
     img {
       max-width: 300px;
       margin: 0 auto;
