--- a/less/pages/homepage/mission-section.less
+++ b/less/pages/homepage/mission-section.less
@@ -2,15 +2,53 @@
 
 #mission-section {
   // put all the CSS for the homepage mission section here
-  background-color: rgb(184,214,206);
 
-  .mission {
-    font-size: 35px;
-    img {
-      max-width: 300px;
-      margin: 0 auto;
-      align-items: center;
-    }
+
+background-color: rgb(184,214,206);
+
+.center {
+  width: 75%;
+
+  h1 {
+    font-size: 34px;
   }
+
+  h2 {
+    font-size: 18px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+}
+
+
+.mission-artwork {
+  width: 30%;
+  }
+
+.mission-artwork img {
+  width: 90%;
+}
+
+.mission-art1,
+.mission-art3 {
+  margin-left: 19%;
+}
+
+.mission-art2,
+.mission-art4 {
+  margin-right: 19%;
+}
+
+.mission-art3 {
+  clear: left;
+}
+
+
+
+
+
+
 
 }
