--- a/less/modules/global-footer.less
+++ b/less/modules/global-footer.less
@@ -7,5 +7,24 @@
 
   width: 100%;
   overflow:hidden;
-  margin: 0px;
+  margin: 0 0;
+  max-height: 150px;
+
+  a {
+    color: white;
+  }
+
+  #address {
+    float: left;
+    margin-top: -30px;
+  }
+  #footer_info {
+    float: right;
+    margin-top: -25px;
+  }
+  .footer_logo {
+    width: 9%;
+    margin-top: -30px;
+    margin-left: 280px;
+  }
 }
