moving style to less page- bio page

--- a/less/pages/bios-page.less
+++ b/less/pages/bios-page.less
@@ -18,10 +18,31 @@
     text-align:center;
   }
 
+  h1 {
+    text-align: center;
+  }
+
   .member {
     float: left;
     width: 20%;
 
     a { display: block; }
+  }
+
+  .content {
+    padding-bottom: 100px;
+  }
+
+  .bios {
+    display: inline-block;
+    margin: 20px 50px;
+    }
+
+  .bios img {
+    display: block;
+    }
+
+  .bios h4 {
+    display: inline;
   }
 }
