--- a/css/main.css
+++ b/css/main.css
@@ -316,12 +316,28 @@
   clear: both;
   text-align: center;
 }
+#bios-page h1 {
+  text-align: center;
+}
 #bios-page .member {
   float: left;
   width: 20%;
 }
 #bios-page .member a {
   display: block;
+}
+#bios-page .content {
+  padding-bottom: 100px;
+}
+#bios-page .bios {
+  display: inline-block;
+  margin: 20px 50px;
+}
+#bios-page .bios img {
+  display: block;
+}
+#bios-page .bios h4 {
+  display: inline;
 }
 #gallery-page {
   background-color: #E53E30;
