--- a/less/pages/homepage/intro-section.less
+++ b/less/pages/homepage/intro-section.less
@@ -1,5 +1,15 @@
 // main: ../pages.less
 
 #intro-section {
-  background-color: @white;
+  background-color: #000;
+
+  h1{
+    color: #fff;
+    margin-left: 45%;
+    font-family: monospace;
+  }
+   h2{
+      color: #fff;
+      margin-left: 50%;
+    }
 }
