--- a/less/pages/homepage/intro-section.less
+++ b/less/pages/homepage/intro-section.less
@@ -7,9 +7,24 @@
     color: #fff;
     margin-left: 45%;
     font-family: monospace;
+    font-weight: bolder;
+    font-size: 7em;
   }
    h2{
       color: #fff;
-      margin-left: 50%;
+      margin-left: 52%;
+      font-family: monospace;
+      font-weight: bolder;
+      font-size: 6em;
     }
+   #creativity{
+     position: absolute;
+     z-index: 1;
+     top: 20%;
+   }
+   #unleashed{
+     position: absolute;
+     z-index: 1;
+     top: 28%;
+   }
 }
