Synced up animation timing

--- a/css/main.css
+++ b/css/main.css
@@ -85,15 +85,27 @@
   font-weight: bolder;
   font-size: 6em;
 }
+#intro-section #design {
+  z-index: 1;
+  top: 20%;
+  animation-delay: 1s;
+}
+#intro-section #alliance {
+  z-index: 1;
+  top: 28%;
+  animation-delay: 1s;
+}
 #intro-section #creativity {
   position: absolute;
   z-index: 1;
   top: 20%;
+  animation-delay: 1s;
 }
 #intro-section #unleashed {
   position: absolute;
   z-index: 1;
   top: 28%;
+  animation-delay: 1s;
 }
 #mission-section {
   color: #B7D6CD;
