--- a/less/pages/homepage/intro-section.less
+++ b/less/pages/homepage/intro-section.less
@@ -17,14 +17,26 @@
       font-weight: bolder;
       font-size: 6em;
     }
+#design{
+  z-index: 1;
+  top: 20%;
+  animation-delay: 1s;
+}
+#alliance{
+  z-index: 1;
+  top: 28%;
+  animation-delay: 1s;
+}
    #creativity{
-     position: absolute;
+     position:absolute;
      z-index: 1;
      top: 20%;
+     animation-delay: 1s;
    }
    #unleashed{
      position: absolute;
      z-index: 1;
      top: 28%;
+     animation-delay: 1s;
    }
 }
