--- a/less/pages/bios-page.less
+++ b/less/pages/bios-page.less
@@ -9,6 +9,10 @@
   background-repeat: no-repeat;
   background-position: center;
 
+  .background {
+    padding-top: 30px;
+  }
+
   span {
     display: block;
   }
@@ -24,9 +28,10 @@
 
   .member {
     float: left;
-    width: 20%;
+    width: 30%;
 
-    a { display: block; }
+  a {
+    display: block; }
   }
 
   .content {
