--- a/less/pages/homepage/intro-section.less
+++ b/less/pages/homepage/intro-section.less
@@ -4,39 +4,124 @@
   background-color: #000;
 
   h1{
-    color: #fff;
     margin-left: 45%;
     font-family: monospace;
     font-weight: bolder;
-    font-size: 7em;
   }
    h2{
-      color: #fff;
       margin-left: 52%;
       font-family: monospace;
       font-weight: bolder;
-      font-size: 6em;
     }
+#positioncontrol{
+  display: block;
+}
+
 #design{
-  z-index: 1;
   top: 20%;
   animation-delay: 1s;
+  color: #FFD700;
 }
 #alliance{
-  z-index: 1;
   top: 28%;
   animation-delay: 1s;
+  Color: #8D38C9;
 }
    #creativity{
-     position:absolute;
-     z-index: 1;
+     position: relative;
      top: 20%;
      animation-delay: 1s;
+     Color: #8D38C9;
    }
    #unleashed{
-     position: absolute;
-     z-index: 1;
+     position: relative;
      top: 28%;
      animation-delay: 1s;
+       color: #FFD700;
    }
+
+   //breakpoints
+   @media screen and (min-width:300px) {
+
+     h1{
+       font-size: 2em;
+     }
+      h2{
+         font-size: 1em;
+       }
+
+       .page-container{
+         width: 80%;
+       }
+
+   }
+
+   @media screen and (min-width:400px) {
+
+
+
+       .page-container{
+         width: 80%;
+       }
+
+   }
+
+   @media screen and (min-width:500px) {
+
+
+   }
+
+   @media screen and (min-width:600px) {
+
+
+
+       .page-container{
+         width: 80%;
+       }
+
+   }
+
+   @media screen and (min-width:700px) {
+
+
+
+     .page-container{
+       width: 80%;
+     }
+
+   }
+
+   @media screen and (min-width:800px) {
+
+
+       .page-container{
+         width: 80%;
+       }
+
+   }
+
+   @media screen and (min-width:900px){
+
+
+     .page-container{
+       width: 80%;
+     }
+
+   }
+
+   @media screen and (min-width:1000px){
+
+     h1{
+       font-size: 7em;
+     }
+      h2{
+         font-size: 6em;
+       }
+
+          .page-container{
+            width: 80%;
+          }
+
+   }
+
 }
