--- a/less/pages/homepage/intro-section.less
+++ b/less/pages/homepage/intro-section.less
@@ -4,40 +4,41 @@
   background-color: #000;
 
   h1{
-    margin-left: 45%;
     font-family: monospace;
     font-weight: bolder;
   }
    h2{
-      margin-left: 52%;
       font-family: monospace;
       font-weight: bolder;
     }
 #positioncontrol{
-  display: block;
 }
 
 #design{
-  top: 20%;
+  margin-left: 20%;
+  top: 12%;
   animation-delay: 1s;
   color: #FFD700;
 }
 #alliance{
-  top: 28%;
+  margin-left: 30%;
+  top: 20%;
   animation-delay: 1s;
   Color: #8D38C9;
 }
    #creativity{
+       margin-left: 58%;
+     position: relative;
+     top: 12%;
+     animation-delay: 1s;
+     Color: #CBFFFA;
+   }
+   #unleashed{
+       margin-left: 50%;
      position: relative;
      top: 20%;
      animation-delay: 1s;
-     Color: #8D38C9;
-   }
-   #unleashed{
-     position: relative;
-     top: 28%;
-     animation-delay: 1s;
-       color: #FFD700;
+       color: #FF0000;
    }
 
    //breakpoints
@@ -59,6 +60,12 @@
    @media screen and (min-width:400px) {
 
 
+     h1{
+       font-size: 3em;
+     }
+      h2{
+         font-size: 2em;
+       }
 
        .page-container{
          width: 80%;
@@ -68,22 +75,41 @@
 
    @media screen and (min-width:500px) {
 
-
+     h1{
+       font-size: 4em;
+     }
+      h2{
+         font-size: 3em;
+       }
+       .page-container{
+         width: 80%;
+       }
    }
 
    @media screen and (min-width:600px) {
 
-
-
-       .page-container{
-         width: 80%;
+     h1{
+       font-size: 5em;
+     }
+      h2{
+         font-size: 4em;
        }
+
+
+     .page-container{
+       width: 80%;
+     }
 
    }
 
    @media screen and (min-width:700px) {
 
-
+     h1{
+       font-size: 5em;
+     }
+      h2{
+         font-size: 4em;
+       }
 
      .page-container{
        width: 80%;
