--- a/less/pages/homepage/mission-section.less
+++ b/less/pages/homepage/mission-section.less
@@ -24,13 +24,15 @@ background-color: rgb(184,214,206);
 
 
 .mission-artwork {
-  width: 30%;
+  width: 90%;
   }
 
 .mission-artwork img {
-  width: 90%;
+  width: 24%;
+  margin-top: 5%;
 }
 
+}
 .mission-art1,
 .mission-art3 {
   margin-left: 19%;
@@ -45,10 +47,26 @@ background-color: rgb(184,214,206);
   clear: left;
 }
 
+@media screen and (min-width: 741px) {
+  .mission-artwork {
+    width: 20%;
+  }
 
+  .mission-artwork1 {
+    margin-left: 7%;
+  }
 
+  .mission-artwork2 {
+    margin-right: 1%;
+  }
+  .mission-artwork3 {
+    margin-left: 1%;
+    clear: none;
+  }
 
-
+  .mission-artwork4 {
+    margin-right: 7%;
+  }
 
 
 }
