--- a/less/pages/homepage/mission-section.less
+++ b/less/pages/homepage/mission-section.less
@@ -25,27 +25,33 @@ background-color: rgb(184,214,206);
 
 .mission-artwork {
   width: 90%;
+  margin-left: 7%;
   }
 
 .mission-artwork img {
   width: 24%;
   margin-top: 5%;
+  margin-bottom: absolute;
 }
 
 }
 .mission-art1,
 .mission-art3 {
-  margin-left: 19%;
+
 }
 
 .mission-art2,
 .mission-art4 {
-  margin-right: 19%;
+
 }
 
 .mission-art3 {
-  clear: left;
+
 }
+
+
+
+/*created breakpoint */
 
 @media screen and (min-width: 741px) {
   .mission-artwork {
