Added gray border to image boxes.

--- a/css/main.css
+++ b/css/main.css
@@ -443,6 +443,7 @@
 #mission-section .mission-artwork img {
   width: 24%;
   margin-top: 5%;
+  border: 1px solid gray;
   margin-bottom: absolute;
 }
 #who-section {
