--- a/less/pages/homepage/mission-section.less
+++ b/less/pages/homepage/mission-section.less
@@ -31,6 +31,7 @@ background-color: rgb(184,214,206);
 .mission-artwork img {
   width: 24%;
   margin-top: 5%;
+  border: 1px solid gray;
   margin-bottom: absolute;
 }
 
