--- a/less/pages/individual-works.less
+++ b/less/pages/individual-works.less
@@ -3,9 +3,25 @@
 #individual-works {
   // put all the CSS for the individual works here
   background-color: @light-tan;
+}
 
   #image {
     margin: auto;
     display: block;
-  }
+    text-align: center;
+    max-width: 700px;
+    width:700px;
+    min-width: 300px;
+}
+
+#global-footer {
+  display: block;
+  clear: both;
+  position: absolute;
+  float:left;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  overflow:hidden;
+  margin: 0px;
 }
