--- a/css/main.css
+++ b/css/main.css
@@ -578,9 +578,24 @@
 #individual-works {
   background-color: #F7F3E2;
 }
-#individual-works #image {
+#image {
   margin: auto;
   display: block;
+  text-align: center;
+  max-width: 700px;
+  width: 700px;
+  min-width: 300px;
+}
+#global-footer {
+  display: block;
+  clear: both;
+  position: absolute;
+  float: left;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+  margin: 0px;
 }
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
