--- a/less/pages/individual-works.less
+++ b/less/pages/individual-works.less
@@ -3,13 +3,14 @@
 #individual-works {
   // put all the CSS for the individual works here
   background-color: @light-tan;
-}
 
   #image {
     margin: auto;
     display: block;
     text-align: center;
-    max-width: 700px;
-    width:700px;
-    min-width: 300px;
+    background-color:black;
+    overflow: hidden;
+    clear:both;
+  }
+
 }
