--- a/css/main.css
+++ b/css/main.css
@@ -578,13 +578,13 @@
 #individual-works {
   background-color: #F7F3E2;
 }
-#image {
+#individual-works #image {
   margin: auto;
   display: block;
   text-align: center;
-  max-width: 700px;
-  width: 700px;
-  min-width: 300px;
+  background-color: black;
+  overflow: hidden;
+  clear: both;
 }
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
