changed the size of the image

--- a/less/pages/individual-works.less
+++ b/less/pages/individual-works.less
@@ -8,9 +8,13 @@
     margin: auto;
     display: block;
     text-align: center;
-    background-color:black;
     overflow: hidden;
     clear:both;
+  }
+
+  #test{
+    width: 50em;
+    min-width: 10em;
   }
 
 }
