--- a/less/modules/global-footer.less
+++ b/less/modules/global-footer.less
@@ -1,5 +1,9 @@
 // main: modules.less
 
+body {
+  background-color: @dark-gray !important;
+}
+
 #global-footer {
   // put all the CSS for the global footer here
   background-color: @dark-gray;
