--- a/less/pages/bios-page.less
+++ b/less/pages/bios-page.less
@@ -3,16 +3,6 @@
 #bios-page {
   // put all the CSS for the bios page here
 
-  background-image: url("../images/bios/backgroundbio.jpg");
-  background-size: 100%;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position: center;
-
-  .background {
-    padding-top: 30px;
-  }
-
   span {
     display: block;
   }
@@ -20,6 +10,13 @@
   .content {
     clear: both;
     text-align:center;
+    padding-top: 30px;
+    padding-bottom: 100px;
+    background-image: url("../images/bios/backgroundbio.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   h1 {
@@ -32,10 +29,6 @@
 
   a {
     display: block; }
-  }
-
-  .content {
-    padding-bottom: 100px;
   }
 
   .bios {
