moved the background color for gallery page to div.content

--- a/less/pages/gallery-page.less
+++ b/less/pages/gallery-page.less
@@ -2,7 +2,6 @@
 
 #gallery-page {
   // put all the CSS for the gallery page here
-  background-color: @red;
 
   .grid-sizer,
   .grid-item {
@@ -11,7 +10,9 @@
     img { width: 100%; }
   }
 
-  background-color: @sello-tape;
+  .content {
+    background-color: @sello-tape;
+  }
 
 
 
