moved the background color inside the .content class

--- a/less/pages/individual-works.less
+++ b/less/pages/individual-works.less
@@ -2,7 +2,10 @@
 
 #individual-works {
   // put all the CSS for the individual works here
-  background-color: @light-tan;
+
+  .content{
+    background-color: @light-tan;
+  }
 
   #image {
     margin: auto;
