--- a/css/main.css
+++ b/css/main.css
@@ -569,7 +569,7 @@ body {
   width: 300px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-#individual-works {
+#individual-works .content {
   background-color: #F7F3E2;
 }
 #individual-works #image {
